--- a/index.html
+++ b/index.html
@@ -14,9 +14,89 @@
     />
 
     <title>Hello, world!</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      body {
+        background-color: rgb(219, 226, 226);
+      }
+      .row {
+        background-color: #fff;
+        border-radius: 30px;
+        box-shadow: 12px 12px 22px grey;
+      }
+      img {
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+      }
+      .btn1 {
+        border: none;
+        outline: none;
+        height: 50px;
+        width: 100%;
+        background-color: #000;
+        color: #fff;
+        border-radius: 4px;
+        font-weight: bold;
+      }
+      .btn1:hover {
+        background-color: #fff;
+        border: 1px solid;
+        color: black;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <section class="form my-4 mx-5">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-lg-5">
+            <img
+              src="https://images.unsplash.com/photo-1527203561188-dae1bc1a417f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=958&q=80"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="col-lg-7 px-5 pt-5">
+            <h1 class="font-weight-bold py-3">Logo</h1>
+            <h4>Sign into your account</h4>
+            <form>
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input
+                    type="email"
+                    class="form-control my-3 p-4"
+                    placeholder="Email Address"
+                  />
+                </div>
+              </div>
+
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <input
+                    type="password"
+                    class="form-control my-3 p-4"
+                    placeholder="Password"
+                  />
+                </div>
+              </div>
+
+              <div class="form-row">
+                <div class="col-lg-7">
+                  <button type="button" class="btn1 mt-3 mb-5">Login</button>
+                </div>
+              </div>
+
+              <a href="#">Forgot Password?</a>
+              <p>Don't have an account? <a href="#">Register here</a></p>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
